# loop_adapt

./: .gitignore  CMakeLists.txt  ChangeLog  INTERNALS.md  Makefile  Makefile_old  README.md  config.mk  loopAdaptConfig.cmake.in  loop_adapt.c  loop_adapt_eval.h  loop_adapt_eval_blocksize.h  loop_adapt_helper.c  loop_adapt_types.h
apps/: Makefile  loop_adapt_avail.c
config/: LOOP.txt  LOOP.yaml
docs/: library_design.pptx
evaluator/: Makefile  interface.c  interface.h  main.cpp  parser.cpp  test_parser.c
examples/: CMakeLists.txt  Makefile  Makefile_old  jacobi-2D-5pt-block.c  simple_omp.c  simple_omp_parallel.c
examples/include/: Array.h
examples/src/: jacobi-2D-5pt-block.c  jacobi_with_blocking.cpp  jacobi_with_blocking_mc_scope.cpp  jacobi_with_blocking_thread_scope.cpp  simple_omp.c  simple_omp_dvfs.c
include/: bstrlib_helper.h  config.h  config.h.in  error.h  ghash.h  ghash_add.h  loop_adapt.h  loop_adapt_calc.h  loop_adapt_config.h  loop_adapt_configuration.h  loop_adapt_configuration_backends.h  loop_adapt_configuration_cc_client.h  loop_adapt_configuration_cc_client_base.hpp  loop_adapt_configuration_cc_client_policy.hpp  loop_adapt_configuration_socket.h  loop_adapt_configuration_socket_ringbuffer.h  loop_adapt_configuration_socket_ringbuffer_types.h  loop_adapt_configuration_socket_thread.h  loop_adapt_configuration_stdout.h  loop_adapt_configuration_txt.h  loop_adapt_configuration_types.h  loop_adapt_eval.h  loop_adapt_eval_blocksize.h  loop_adapt_eval_dvfs.h  loop_adapt_eval_ompthreads.h  loop_adapt_helper.h  loop_adapt_hwloc_tree.h  loop_adapt_internal.h  loop_adapt_lock.h  loop_adapt_measurement.h  loop_adapt_measurement_likwid.h  loop_adapt_measurement_likwid_nvmon.h  loop_adapt_measurement_list.h  loop_adapt_measurement_timer.h  loop_adapt_measurement_types.h  loop_adapt_parameter.h  loop_adapt_parameter_cpufrequency.h  loop_adapt_parameter_limit.h  loop_adapt_parameter_limit_types.h  loop_adapt_parameter_list.h  (+19 more)
old_version/: ChangeLog  Doxyfile  loopAdaptConfig.cmake.in
old_version/examples/: CMakeLists.txt
old_version/examples/src/: Array.cpp  jacobi-2D-5pt-block.c  jacobi_with_blocking_mc_scope.cpp  simple_omp.c  simple_omp_funcptr.c
old_version/include/: ghash.h  loop_adapt_policy.h  loop_adapt_policy_dvfs.h  loop_adapt_policy_funcptr.h  loop_adapt_search.h
old_version/src/: loop_adapt_calc.c  loop_adapt_policy.c  loop_adapt_policy_blocksize.c  loop_adapt_policy_funcptr.c  loop_adapt_policy_ompthreads.c  loop_adapt_search.c  test_bstrlib_helper.c
pyLAserv/: pyLAserv.py
src/: bstrlib_helper.c  ghash.c  loop_adapt.c  loop_adapt_calc.c  loop_adapt_config.c  loop_adapt_configuration.c  loop_adapt_configuration_cc_client.cc  loop_adapt_configuration_cc_client.cpp  loop_adapt_configuration_cc_client_base.cpp  loop_adapt_configuration_socket.c  loop_adapt_configuration_socket_ringbuffer.c  loop_adapt_configuration_socket_thread.c  loop_adapt_configuration_stdout.c  loop_adapt_configuration_txt.c  loop_adapt_eval.c  loop_adapt_eval_blocksize.c  loop_adapt_eval_dvfs.c  loop_adapt_eval_ompthreads.c  loop_adapt_helper.c  loop_adapt_hwloc_tree.c  loop_adapt_measurement.c  loop_adapt_measurement_likwid.c  loop_adapt_measurement_likwid_nvmon.c  loop_adapt_measurement_timer.c  loop_adapt_parameter.c  loop_adapt_parameter_limit.c  loop_adapt_parameter_value.c  loop_adapt_policy.c  loop_adapt_policy_blocksize.c  loop_adapt_policy_dvfs.c  loop_adapt_policy_functions.c  loop_adapt_policy_ompthreads.c  loop_adapt_search.c  loop_adapt_threads.c  map.c
tests/: Makefile  README.md  configuration_test.c  imap_test.c  measurement_test.c  parameter_limit_test.c  parameter_test.c  parameter_value_test.c  ringbuffer_test.c  smap_test.c  threads_test.c
